--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,6 @@
 <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-
+<h1>this is Weixin-Api index Home</h1>
 </body>
 </html>
