--- a/static/member/auth.html
+++ b/static/member/auth.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>授权测试</title>
-<link rel="stylesheet" type="text/css" href="css/auth.css" />
-<script type="text/javascript" src="../assets/jquery-3.2.1.min.js"></script>
+	<meta charset="UTF-8">
+	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+	<meta content="yes" name="apple-mobile-web-app-capable">
+	<meta content="black" name="apple-mobile-web-app-status-bar-style">
+	<meta content="telephone=no" name="format-detection">
+	<meta content="email=no" name="format-detection">
+	<title>授权测试</title>
+	<link rel="stylesheet" type="text/css" href="css/auth.css" />
+	<script type="text/javascript" src="../assets/jquery-3.2.1.min.js"></script>
 </head>
+
 <body>
-<div>
-	<ul>
-		<li><button type="button" id="btn_snsapi_userinfo">用户确认授权</button></li>
-		<li><button type="button" id="btn_snsapi_base">静默方式授权</button></li>
-	</ul>
-</div>
-<script type="text/javascript" src="js/auth.js"></script>
+	<div class="b_div">
+		<ul>
+			<li><button type="button" id="btn_snsapi_userinfo">用户确认授权</button></li>
+			<li><button type="button" id="btn_snsapi_base">静默方式授权</button></li>
+		</ul>
+	</div>
+	<script type="text/javascript" src="js/auth.js"></script>
 </body>
+
 </html>
