--- a/static/member/auth_snsapi_base.html
+++ b/static/member/auth_snsapi_base.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="email=no" name="format-detection">
+    <title>静默方式授权</title>
+    <link rel="stylesheet" type="text/css" href="css/auth_snsapi_base.css" />
+    <script type="text/javascript" src="../assets/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/weixin-base.js"></script>
+</head>
+
+<body>
+    <div id="head_div">
+        <img id="head_img_div" />
+    </div>
+    <div class="one_body">
+        <div class="left">
+            昵称：
+        </div>
+        <div class="right" id="nickname">
+            ***
+        </div>
+    </div>
+    <div class="one_body">
+        <div class="left">
+            性别：
+        </div>
+        <div class="right" id="sex">
+            ***
+        </div>
+    </div>
+    <div class="one_body">
+        <div class="left">
+            国籍：
+        </div>
+        <div class="right" id="country">
+            ***
+        </div>
+    </div>
+    <div class="one_body">
+        <div class="left">
+            地区：
+        </div>
+        <div class="right" id="diqu">
+            ***
+        </div>
+    </div>
+    <div class="but_div">
+        <button onclick="window.location.href = '/member/auth.html'">返回</button>
+    </div>
+    <script type="text/javascript" src="js/auth_snsapi_base.js"></script>
 </body>
+
 </html>
